send and verify OTP

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,7 @@
 spring.data.mongodb.uri=mongodb+srv://admin:admin@cluster0.21hcyfi.mongodb.net/server-ktpm?retryWrites=true&w=majority
 
 logging.level.org.springframework.data=debug
-logging.level.=error
+
+twilio.account.sid=AC097c424dffcac5ea6a47b156fd52bf32
+twilio.auth.token=37b6c66f64ad1a760c31b3322538ee88
+twilio.phone.number=+13465455717
